tests/NormalTests/paczka1/fuzzy1/97699637.err
Error in line 4: 57Mk A977 20,7
Error in line 15: Ou2JneFbKT A77 138,3
Error in line 1: Ou2Jn9eFbKT A977 96,7
Error in line 20: Ou2Jn9eFbKT A72 2,7
Error in line 26: 57Mk A813 34,8
Error in line 32: uBTqEqds A72 12,7
Error in line 36: uBTqEqds S316 81,8
